feat: add event Participant
