# doc/api.yml
@@ -835,6 +835,253 @@ paths:
           $ref: '#/components/responses/429'
         '500':
           $ref: '#/components/responses/500'
+  /places:
+    get:
+      tags:
+        - Attending
+      summary: get all places
+      description: get all places
+      operationId: getPlaces
+      responses:
+        "200":
+          description: all places
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Place"
+        "400":
+          $ref: "#/components/responses/400"
+        "403":
+          $ref: "#/components/responses/403"
+        "404":
+          $ref: "#/components/responses/404"
+        "429":
+          $ref: "#/components/responses/429"
+        "500":
+          $ref: "#/components/responses/500"
+    put:
+      tags:
+        - Attending
+      summary: save or update existing places
+      description: save if id are provided. Create them otherwise
+      operationId: saveOrUpdatePlaces
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: "#/components/schemas/Place"
+      responses:
+        "200":
+          description: the saved/updated places
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Place"
+        "400":
+          $ref: "#/components/responses/400"
+        "403":
+          $ref: "#/components/responses/403"
+        "404":
+          $ref: "#/components/responses/404"
+        "429":
+          $ref: "#/components/responses/429"
+        "500":
+          $ref: "#/components/responses/500"
+  /places/{id}:
+    get:
+      tags:
+        - Attending
+      summary: get place by id
+      description: get place by identifier
+      operationId: getPlaceById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: the identified place
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Place"
+        "400":
+          $ref: "#/components/responses/400"
+        "403":
+          $ref: "#/components/responses/403"
+        "404":
+          $ref: "#/components/responses/404"
+        "429":
+          $ref: "#/components/responses/429"
+        "500":
+          $ref: "#/components/responses/500"
+  /events:
+    get:
+      tags:
+        - Attending
+      summary: Get all events
+      operationId: getEvents
+      responses:
+        '200':
+          description: List of events
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Event'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+    put:
+      tags:
+        - Attending
+      summary: create or update events
+      description: Update events when `id` are provided and create events otherwise.
+      operationId: putEvents
+      requestBody:
+        required: true
+        description: Events to update
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/UpdateEvent'
+      responses:
+        '200':
+          description: Created events
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Event'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+  /events/{id}:
+    get:
+      tags:
+        - Attending
+      summary: get events by id
+      description: get events by identifier
+      operationId: getEventsById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: the identified place
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Event"
+        "400":
+          $ref: "#/components/responses/400"
+        "403":
+          $ref: "#/components/responses/403"
+        "404":
+          $ref: "#/components/responses/404"
+        "429":
+          $ref: "#/components/responses/429"
+        "500":
+          $ref: "#/components/responses/500"
+  /events/{event_id}/event_participants:
+    get:
+      tags:
+        - Attending
+      summary: Get all the event participants.
+      parameters:
+        - name: event_id
+          in: path
+          required: true
+          schema:
+            type: string
+      operationId: getEventParticipants
+      responses:
+        '200':
+          description: List of all the participants
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/EventParticipant'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+    put:
+      tags:
+        - Attending
+      summary: Create or update event participants
+      parameters:
+        - name: event_id
+          in: path
+          required: true
+          schema:
+            type: string
+      operationId: createOrUpdateEventParticipants
+      requestBody:
+        description: Event Participants to create or to update
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/CreateOrUpdateEventParticipant'
+      responses:
+        '200':
+          description: Created or updated event participants
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/EventParticipant'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
 components:
   securitySchemes:
     BearerAuth:
@@ -979,7 +1226,6 @@ components:
     Fee:
       allOf:
         - $ref: '#/components/schemas/CreateFee'
-      type: object
       properties:
         id:
           type: string
@@ -1086,3 +1332,166 @@ components:
       example:
         type: InternalServerException
         message: Unexpected error
+    CreateEvent:
+      type: object
+      properties:
+        name:
+          type: string
+        type:
+          type: string
+          enum:
+            - COURSE
+            - EXAMEN
+            - OTHER
+        date:
+          type: string
+          format: date-time
+        start_time:
+          type: string
+          format: time
+        finish_time:
+          type: string
+          format: time
+        supervisor:
+          type: string
+          enum:
+            - TEACHER
+            - ADMINISTRATOR
+        status:
+          type: string
+          enum:
+            - ONGOING
+            - CANCELED
+        place_id:
+          type: string
+        group_id:
+          type: string
+    UpdateEvent:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        type:
+          type: string
+          enum:
+            - COURSE
+            - EXAMEN
+            - OTHER
+        date:
+          type: string
+          format: date-time
+        start_time:
+          type: string
+          format: time
+        finish_time:
+          type: string
+          format: time
+        supervisor:
+          type: string
+          enum:
+            - TEACHER
+            - ADMINISTRATOR
+        status:
+          type: string
+          enum:
+            - ONGOING
+            - CANCELED
+        place_id:
+          type: string
+        group_id:
+          type: string
+    Events:
+      type: object
+      properties:
+        name:
+          type: string
+        type:
+          type: string
+          enum:
+            - COURSE
+            - EXAMEN
+            - OTHER
+        date:
+          type: string
+          format: date-time
+        start_time:
+          type: string
+          format: time
+        finish_time:
+          type: string
+          format: time
+        supervisor:
+          type: string
+          enum:
+            - TEACHER
+            - ADMINISTRATOR
+        status:
+          type: string
+          enum:
+            - ONGOING
+            - CANCELED
+    Event:
+      type: object
+      properties:
+        id:
+          type: string
+        place:
+          $ref: '#/components/schemas/Place'
+        group:
+          $ref: '#/components/schemas/Group'
+      allOf:
+        - $ref: '#/components/schemas/Events'
+
+    CreateOrUpdateEventParticipant:
+      type: object
+      properties:
+        id:
+          type: string
+        event_id:
+          type: string
+        user_id:
+          type: string
+        event_role:
+          type: string
+          enum:
+            - SUPERVISOR
+            - ATTENDANT
+        attendance:
+          type: string
+          enum:
+            - EXPECTED
+            - HERE
+            - MISSING
+    EventParticipant:
+      type: object
+      properties:
+        id:
+          type: string
+        event_role:
+          type: string
+          enum:
+            - SUPERVISOR
+            - ATTENDANT
+        attendance:
+          type: string
+          enum:
+            - EXPECTED
+            - HERE
+            - MISSING
+        user:
+          $ref: '#/components/schemas/User'
+    CreatePlace:
+      type: object
+      properties:
+        label:
+          type: string
+          example: "HEI Ivandry"
+    Place:
+      allOf:
+        - $ref: "#/components/schemas/CreatePlace"
+      properties:
+        id:
+          type: "string"
+          example: "uuid"
