# src/main/java/school/hei/haapi/endpoint/rest/security/SecurityConf.java
@@ -100,6 +100,8 @@ public class SecurityConf extends WebSecurityConfigurerAdapter {
         .antMatchers(GET, "/groups").authenticated()
         .antMatchers(GET, "/groups/*").authenticated()
         .antMatchers(PUT, "/groups/**").hasAnyRole(MANAGER.getRole())
+        .antMatchers(GET, "/events/*/event_participants").hasAnyRole(MANAGER.getRole(),TEACHER.getRole())
+        .antMatchers(PUT, "/events/*/event_participants").hasAnyRole(MANAGER.getRole(),TEACHER.getRole())
         .antMatchers("/**").denyAll()
 
         // disable superfluous protections
